--- a/src/main/java/vistas/dialogos/DlgEmpleadoCRUD.form
+++ b/src/main/java/vistas/dialogos/DlgEmpleadoCRUD.form
@@ -48,8 +48,8 @@
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.DesignGridLayout">
         <Property name="columns" type="int" value="0"/>
-        <Property name="horizontalGap" type="int" value="5"/>
         <Property name="rows" type="int" value="1"/>
+        <Property name="horizontalGap" type="int" value="5"/>
       </Layout>
       <SubComponents>
         <Component class="javax.swing.JButton" name="jButton1">
@@ -92,8 +92,8 @@
 
               <Layout class="org.netbeans.modules.form.compat2.layouts.DesignGridLayout">
                 <Property name="columns" type="int" value="0"/>
-                <Property name="horizontalGap" type="int" value="10"/>
                 <Property name="rows" type="int" value="1"/>
+                <Property name="horizontalGap" type="int" value="10"/>
               </Layout>
             </Container>
             <Container class="javax.swing.JPanel" name="pnlNavegacion">
@@ -105,8 +105,8 @@
 
               <Layout class="org.netbeans.modules.form.compat2.layouts.DesignGridLayout">
                 <Property name="columns" type="int" value="0"/>
-                <Property name="horizontalGap" type="int" value="2"/>
                 <Property name="rows" type="int" value="1"/>
+                <Property name="horizontalGap" type="int" value="2"/>
               </Layout>
             </Container>
             <Component class="javax.swing.JLabel" name="jLabel1">
@@ -2144,13 +2144,12 @@
                                                   <Component id="dcFechaInicio" max="32767" attributes="0"/>
                                                   <Component id="dcFechaFin" max="32767" attributes="0"/>
                                               </Group>
-                                              <EmptySpace max="32767" attributes="0"/>
                                           </Group>
                                           <Group type="102" alignment="0" attributes="0">
                                               <Component id="jLabel24" min="-2" max="-2" attributes="0"/>
-                                              <EmptySpace max="32767" attributes="0"/>
+                                              <EmptySpace pref="34" max="32767" attributes="0"/>
                                               <Component id="txtCodigoTrabajador" min="-2" pref="85" max="-2" attributes="0"/>
-                                              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                                              <EmptySpace min="0" pref="-9" max="32767" attributes="0"/>
                                           </Group>
                                           <Group type="102" alignment="0" attributes="0">
                                               <Component id="btnAgregarC" min="-2" pref="75" max="-2" attributes="0"/>
